# Jb-Woodworks

./: .gitignore  Backup-Sanctum.bat  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EVE.exe.sha256  INDEX.md  LICENSE  LICENSE-CANDIDATES.md  PARALLEL-AGENT-COORDINATION.md  README.md  RKOJ-Start.bat  SANCTUM.md  Sinister Start.bat  Sinister Start.bat.sha256  Spawn Sanctum Agent.bat  Stop-EVE.bat  _SCAFFOLD-BRIEF.md  agent-prefs.json  docker-compose.yml  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  railway.json  tailwind.config.ts
.claude/: settings.json  (+2 more)
projects/sinister-forge/source/: PLAN.md  README.md  pyproject.toml
projects/sinister-hieroglyphics/: CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
projects/sinister-hieroglyphics/docs/: GLYPH-SYNTAX.md
projects/sinister-hieroglyphics/examples/: quantum_sim_demo.shp
projects/sinister-hieroglyphics/tests/: test_bridge_python_sim.py  test_codegen.py  test_codegen_ptx.py  test_density.py  test_density_signal_fallback.py  test_hgly_trainer_multiobj.py  test_interpreter.py  test_ir.py  test_loop_checkpoint_hgly.py  test_parser.py  test_sim.py  test_smoke.py
projects/sinister-imessage-bridge/source/: README.md  pyproject.toml  requirements.txt
projects/sinister-memory/: CHARTER.md  CLAUDE.md  README.md  pyproject.toml
projects/sinister-memory/docs/: 01-architecture.md  02-cli-usage.md  03-agent-integration.md
projects/sinister-memory/scripts/: audit_per_lane.py  generate_lane_briefings.py  rotate_fleet_updates.py  rotate_progress.py
projects/sinister-memory/tests/: test_audit_patches.py  test_basic.py  test_consolidate_end_to_end.py  test_iter10_11.py  test_iter13.py  test_iter15_16.py  test_iter28.py  test_iter3.py  test_iter35.py  test_iter47.py  test_iter64.py  test_p3_p6.py  test_recall_quality.py
projects/sinister-mind/source/: pyproject.toml
projects/sinister-overseer/: .env.example  .gitignore  CLAUDE.md  MISSION.md  README.md  SESSION-START.md  pyproject.toml
projects/sinister-overseer/config/: attached-projects.json  improvement-recipe.json
projects/sinister-overseer/docs/: 01-architecture.md  02-token-efficiency.md  03-watch-architecture.md  04-per-project-adapters.md  05-fails-to-learn.md  06-cross-project-learning.md  07-evolution-roadmap.md  08-contradiction-engine.md  09-unified-improvement-engine.md  10-divergence-and-autonomous-sub-lanes.md
projects/sinister-overseer/tests/: test_divergence.py  test_rate_limit_learner.py  test_sensors.py  test_smoke.py
projects/sinister-sleight/: .env.example  .gitignore  CLAUDE.md  MISSION.md  README.md  pyproject.toml
projects/sinister-sleight/data/: .gitignore  README.md
projects/sinister-sleight/docs/: 00-github-prior-art.md  01-architecture.md  02-self-training.md  03-penny-stocks-fake-env.md  04-quantum-integration.md  05-risk-and-circuit-breakers.md  06-roadmap.md
projects/sinister-sleight/models/: .gitignore
projects/sinister-sleight/tests/: test_smoke.py
projects/sinister-term-themes/: .env.example  .gitignore  CLAUDE.md  MISSION.md  README.md  pyproject.toml
projects/sinister-term-themes/docs/: 00-overview.md  01-entity-design.md  02-color-palettes.md  03-render-engine.md  04-artistic-doctrine.md  05-roadmap.md  06-sinister-os-integration.md
projects/sinister-term-themes/tests/: test_smoke.py
projects/sinister-term/source/: pyproject.toml  term-keybindings.json
tools/forge-memory-bridge/: README.md  pyproject.toml
tools/forge-memory-bridge/forge_memory_bridge/: __init__.py  __main__.py  api.py
tools/forge-memory-bridge/tests/: test_smoke.py
tools/memory-graph-render/: README.md  pyproject.toml
tools/memory-graph-render/memory_graph_render/: __init__.py  __main__.py  render.py
tools/nano-banana/: .env.example  AUTHOR.md  README.md  pyproject.toml  quick_test.bat
tools/nano-banana/nano_banana/: __init__.py  __main__.py  api.py  cli.py
tools/sanctum-backup/: README.md  install-task.ps1  pyproject.toml
tools/sanctum-backup/sanctum_backup/: __init__.py  __main__.py  cli.py  engine.py  state.py
tools/sanctum-backup/tests/: __init__.py  conftest.py  test_cli.py  test_engine.py
tools/sinister-browser/: README.md  pyproject.toml
tools/sinister-browser/sinister_browser/: __init__.py  __main__.py  probe.py
tools/sinister-browser/tests/: test_probe.py
tools/sinister-cli/: README.md  pyproject.toml
tools/sinister-cli/sinister_cli/: __main__.py
tools/sinister-diagnose/: README.md  pyproject.toml
tools/sinister-diagnose/sinister_diagnose/: __init__.py  __main__.py  checks.py  cli.py
tools/sinister-diagnose/tests/: __init__.py  test_checks.py  test_cli.py
tools/sinister-eve/: pyproject.toml  sinister-eve.spec
tools/sinister-eve/sinister_eve/: __init__.py  __main__.py
tools/sinister-jcode-shim/: README.md  pyproject.toml
tools/sinister-jcode-shim/sinister_jcode_shim/: __init__.py  __main__.py  cli.py
tools/sinister-login/: README.md  pyproject.toml
tools/sinister-login/sinister_login/: __init__.py  __main__.py  api.py  providers.py
tools/sinister-login/tests/: test_login.py
tools/sinister-model/: README.md  pyproject.toml
tools/sinister-model/sinister_model/: __init__.py  __main__.py  cli.py  registry.py  state.py
tools/sinister-model/tests/: __init__.py  conftest.py  test_cli.py  test_registry.py
tools/sinister-review/: README.md  pyproject.toml
tools/sinister-review/sinister_review/: __init__.py  __main__.py  api.py
tools/sinister-review/tests/: test_review.py
tools/sinister-seraphim/: README.md  __init__.py  audit.py  budget.py  cli.py  cloud_submit.py  dashboard.py  fingerprint.py  license.py  memory_kernel.py  pyproject.toml  qrng.py  snap_re.py  summarize.py
tools/sinister-seraphim/tests/: conftest.py  test_smoke.py
tools/sinister-swarm/: README.md  pyproject.toml
tools/sinister-swarm/sinister_swarm/: __init__.py  __main__.py  api.py
tools/sinister-swarm/tests/: test_swarm.py
tools/sinister-usage/: README.md  pyproject.toml
tools/sinister-usage/sinister_usage/: __init__.py  __main__.py  api.py  endpoints.py  estimator.py  sources.py
(+4709 files in other folders)
