# Author: RKOJ-ELENO :: 2026-05-25
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sinister-hieroglyphics"
version = "0.0.1"
description = "Token-dense hardware-aware language for the Sinister fleet."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RKOJ-ELENO" }]
license = { text = "MIT" }
keywords = ["sinister", "hieroglyphics", "language", "compiler", "sanctum"]

[project.scripts]
hgly = "hgly.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
