# Sinister Sanctum :: forge-memory-bridge
# Author: RKOJ-ELENO :: 2026-05-21
# License: AGPL-3.0-or-later

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-memory-bridge"
version = "0.1.2"
description = "Sinister Sanctum :: disk-first memory store bridging Ruflo agentdb_* into a Python API any agent (Forge, Term, Panel, RKOJ, APK) can import without MCP plumbing. jcode-memory-feature parity (incl. BM25 re-scoring v0.1.2)."
authors = [{ name = "RKOJ-ELENO" }]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
  # BM25 re-scoring (jcode parity, brain entry pattern 6).
  # rank_bm25 is pure-Python+numpy, tiny (~9KB wheel); promoted to
  # required so RKOJ.exe builds always include it.
  "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
semantic = [
  # optional: for local semantic recall without MCP
  "scikit-learn>=1.3",
]

[project.scripts]
forge-memory = "forge_memory_bridge.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge_memory_bridge*"]
