# Sinister Sanctum :: sinister-review
# Author: RKOJ-ELENO :: 2026-05-21
# License: AGPL-3.0-or-later

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sinister-review"
version = "0.1.0"
description = "Sinister Sanctum :: autoreview / autojudge (jcode-review parity). Disk-first verdicts under _shared-memory/reviews/. dispatch_llm() is a stub in v0.1.0 (wires per agent-host-routing.md in v0.2.0)."
authors = [{ name = "RKOJ-ELENO" }]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
  # stdlib + git CLI only - no PyPI deps for v0.1.0
]

[project.scripts]
sinister-review = "sinister_review.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sinister_review*"]
